Bug #227322 - [webapp => poll] social medial icons should be visible in one line on poll card,Bug #227334 - [mobile => content page] When selecting some doamin,text is not visible properly.

--- a/packages/nulp_elite/src/styles/style.css
+++ b/packages/nulp_elite/src/styles/style.css
@@ -1267,10 +1267,6 @@ button {
     gap: 55px;
   }
 
-  .react-multi-carousel-list.carousel-container.carousel-bx {
-    padding: 10px 0;
-  }
-
   .profile-card-view .custom-card-box {
     /* margin-left: 9px; */
     width: 48% !important;
@@ -2796,6 +2792,9 @@ button {
 
 .pr-28 {
   padding-right: 28px !important;
+}
+.pr-3{
+  padding-right: 3px !important;
 }
 
 .pr-4 {
